table overflow fix

--- a/openatlas/static/css/style.css
+++ b/openatlas/static/css/style.css
@@ -360,7 +360,7 @@ table td {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    max-width: 400px;
+    max-width: 100px;
 }
 
 select[name="table_table_length"] {
